Fixed uneven spacing on thumbtitles

--- a/component/site/css/pbacademy.css
+++ b/component/site/css/pbacademy.css
@@ -142,6 +142,7 @@
 
 .mainBody .thumbtitle{
     text-align: center;
+    height: 50px;
 }
 .mainBody a{
     color: #114881 !important;
